# oculus-trading-desk

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  README  README.md  compile_commands.json
Testing/Temporary/: CTestCostData.txt
cmake/: Coverage.cmake  Executable.cmake  FindGmock.cmake  FindGtest.cmake  Library.cmake  Mock.cmake  Package.cmake  Test.cmake  Version.cmake  distclean.cmake
ext/libgmock/scripts/: gmock-config
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
src/: CMakeLists.txt  CTestTestfile.cmake  Device.cpp  Display.cpp  Display.h  DisplayUtil.h  VRTradingDesk.cpp
src/DataPrograms/: AskBidBubbleChart.cpp  AskBidBubbleChart.h  BuySellBarVisualisation.cpp  BuySellBarVisualisation.h  CMakeLists.txt  CTestTestfile.cmake  Graph3D.cpp  Graph3D.h  Heatmap2Visualisation.cpp  Heatmap2Visualisation.h  HeatmapVisualisation.cpp  HeatmapVisualisation.h  LineGraph.cpp  LineGraph.h  Visualisation.h
src/DataReaders/: CMakeLists.txt  CSVDataReader.cpp  CSVDataReader.h  CTestTestfile.cmake  DataReader.cpp  DataReader.h  LineDataReader.cpp  LineDataReader.h  MDArchiveDataReader.cpp  MDArchiveDataReader.h
src/DataTypes/: CMakeLists.txt  CSVDataType.cpp  CSVDataType.h  CTestTestfile.cmake  DataType.h  MarketData.h  StringDataType.h
src/Exceptions/: CMakeLists.txt  CTestTestfile.cmake  Exception.cpp  Exception.h  FileNotFoundException.h
src/SourceReaders/: CMakeLists.txt  CTestTestfile.cmake  FileReader.cpp  FileReader.h  RandomCSVSimpleReader.cpp  RandomCSVSimpleReader.h  SourceReader.h  YahooFinanceReader.cpp  YahooFinanceReader.h
src/StockSim/: MarketSim.cpp  Stock.cpp  main.cpp
src/Utils/: CMakeLists.txt  CTestTestfile.cmake  Date.cpp  Date.h
src/gui/: CMakeLists.txt  CTestTestfile.cmake  Display.cpp  Display.h  DisplayUtil.cpp  DisplayUtil.h  ScreenModel.cpp  ScreenModel.h
src/io/: CMakeLists.txt  CTestTestfile.cmake  Device.cpp  Device.h
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  TestAll.cpp  TestDataReaders.cpp  TestDataReaders.h  TestDataTypes.cpp  TestDataTypes.h  TestSourceReaders.cpp  TestSourceReaders.h
test/TestReaders/: CMakeLists.txt  CTestTestfile.cmake  SimpleCSVFile.txt  TestDataReaders.cpp  TestDataReaders.h  TestDataTypes.cpp  TestReaders  TestReaders.cpp  TestSourceReaders.cpp  TestSourceReaders.h
